--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,11 @@ body {
   margin: 0;
 }
 
+body:has(.menu__top-slide:target) {
+  overflow: hidden;
+  height: 100vh;
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -42,6 +47,11 @@ ol {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.a:hover {
+  scale: 120%;
+  color: aqua;
 }
 
 .title {
@@ -156,18 +166,12 @@ ol {
   height: 3px;
 }
 
-// .list {
-//   width: max-content;
-//   text-align: left;
-// }
-
 .list {
   height: 90px;
   display: flex;
   width: content;
   flex-direction: column;
   gap: 4px;
-  // justify-content: space-between;
   margin-bottom: 16px;
   color: #fff;
   font-family: "IBM Plex Sans", sans-serif;
@@ -179,7 +183,6 @@ ol {
 .img {
   height: 520px;
   background-repeat: no-repeat;
-  // margin: 52px 0;
   width: 670px;
 
   @include onTablet {
@@ -259,7 +262,6 @@ ol {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
-  /* 16px */
   width: 100%;
   margin-bottom: 32px;
 
@@ -270,7 +272,6 @@ ol {
 
   &__block {
     display: flex;
-    // box-sizing: border-box;
     height: 100%;
     justify-content: space-between;
     align-items: center;
@@ -292,7 +293,6 @@ ol {
     color: #1a5a4c;
     font-weight: 700;
     line-height: 150%;
-    /* 24px */
     margin-left: 135px;
 
     @include onMob {
@@ -303,13 +303,9 @@ ol {
 
   &-discrioption {
     width: 370px;
-    // height: 119px;
-    // margin: 0 auto;
     color: #4e4e4e;
     font-weight: 300;
     line-height: 150%;
-
-    /* 24px */
     @include onMob {
       width: 280px;
       margin: 0 auto;
@@ -346,24 +342,21 @@ ol {
   display: block;
   gap: 20px;
   margin: 0 auto;
-  // height: max-content;
   margin-bottom: 200px;
 
   @include onMob {
     display: flex;
-    // width: 370px;
-    // overflow: hidden;
     overflow: scroll;
+    overflow-y: hidden;
     height: 410px;
     margin-bottom: 130px;
   }
 
   @include onTablet {
     display: flex;
-    // overflow: hidden;
     overflow: scroll;
+    overflow-y: hidden;
     height: 560px;
-    // height: 410px;
     margin-bottom: 130px;
   }
 
@@ -371,49 +364,40 @@ ol {
     display: flex;
     flex-direction: row;
     gap: 25px;
-    // justify-content: space-between;
     width: 1280px;
     height: 600px;
     margin-bottom: 30px;
-
     &-photo-1 {
       width: 370px;
-      // height: 600px;
       background-repeat: no-repeat;
       background-image: url(../images/Rectangle-galery-1-1280-desk.png);
     }
 
     &-photo-2 {
       width: 770px;
-      // height: 600px;
       background-repeat: no-repeat;
       background-image: url(../images/Rectangle-2-1280.jpg);
     }
 
     @include onMob {
-      // display: flex;
       width: 1200px;
-      // height: 610px;
       gap: 20px;
       margin: 0;
 
       &-photo-1 {
         width: 280px;
-        // height: 410px;
         background-repeat: no-repeat;
         background-image: url(../images/Rectangle_galery-1-320-mob.png);
       }
 
       &-photo-2 {
         width: 280px;
-        // height: 410px;
         background-repeat: no-repeat;
         background-image: url(../images/Rectangle_galery-1-320-mob.png);
       }
 
       &-photo-3 {
         width: 280px;
-        // height: 410px;
         background-repeat: no-repeat;
         background-image: url(../images/Rectangle_galery-1-320-mob.png);
       }
@@ -421,20 +405,17 @@ ol {
 
     @include onTablet {
       width: 1300px;
-      // height: 543px;
       gap: 20px;
       margin: 0;
 
       &-photo-1 {
         width: 320px;
-        // height: 543px;
         background-repeat: no-repeat;
         background-image: url(../images/Rectangle_galery-1-740-Tabl.png);
       }
 
       &-photo-2 {
         width: 320px;
-        // height: 543px;
         background-repeat: no-repeat;
         background-image: url(../images/Rectangle-2-740.jpg);
       }
@@ -479,14 +460,10 @@ ol {
 
 .subscribe {
   position: relative;
-  // box-sizing: border-box;
   height: 550px;
   width: 1280px;
   background-repeat: no-repeat;
   margin: 0 auto;
-  // align-items: center ;
-  // text-align: center;
-  // justify-content: center;
   background-image: url(../images/subscribe_background-1280.png);
 
   @include onTablet {
