--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -28,16 +28,13 @@
     height: min-content;
     // justify-content: space-between;
     padding-top: 35px;
-
+    flex-direction: row;
+    gap: 28px;
     &-time {
       @include onMob {
         padding-top: 0;
       }
     }
-
-    flex-direction: row;
-    gap: 28px;
-
     &--part {
       display: flex;
       width: 100%;
@@ -46,14 +43,15 @@
     }
 
     &--text {
-      width: 100%;
+      width: max-content;
       color: #fff;
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
-      /* 16px */
+      text-decoration: none;
+      transition: 0.5s;
     }
 
     &--time {
