add hoovering effects

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -77,12 +77,50 @@
       }
     }
 
-    &--footer {
-      color: #000;
+  &--footer {
+    color: #0f0e08;
 
-      font-weight: normal;
+    font-weight: normal;
 
-      font-size: 14px;
+    font-size: 14px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -8px;
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: #0f0e08;
+
+        transition: transform 0.3s;
+        transform: scale(0);
+        transform-origin: left;
+      }
+
+      &:hover::after {
+        transform: scale(1);
+      }
+
+      &--1 {
+          width: 35%;
+      }
+      &--2 {
+        width: 35%;
+      }
+
+      &--3 {
+        height: 35px;
+
+        &::after {
+          width: 50%;
+        }
+      }
+
+      &--4 {
+        width: 38%;
+      }
     }
   }
 }
+
