--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -15,6 +15,36 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
+  }
+
+  &__item {
+    position: relative;
     text-decoration: none;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -3px;
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: #0f0e08;;
+
+        transition: transform 0.3s;
+        transform: scale(0);
+        transform-origin: left;
+      }
+
+      &:hover::after {
+        transform: scale(1);
+      }
+
+      &--1 {
+        @include onDesktop {
+        &::after {
+          width: 500%;
+        }
+      }
+      }
   }
 }
