--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,31 @@
+
 @import "utils";
-@import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/working-hours.scss";
+@import "./blocks/main.scss";
+@import "./blocks/section.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/info-block.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/gallery.scss";
+
+.link {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
