--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,49 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} $transition-time;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin onTablet () {
+  @media (min-width: $tablet-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop () {
+  @media (min-width: $desktop-width) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInline () {
+  padding-inline: $paddingInlineMobile;
+
+  @include onTablet() {
+    padding-inline: $paddingInlineTablet;
+  }
+
+  @include onDesktop() {
+    padding-inline: $paddingInlineDesktop;
+  }
+}
+
+@mixin pageGrid () {
+  display: grid;
+  $column: 2;
+  grid-template-columns: repeat($column, 1fr);
+  column-gap: 20px;
+
+  @include onTablet() {
+    $column: 6;
+    grid-template-columns: repeat($column, 1fr);
+    column-gap: 30px;
+  }
+
+  @include onDesktop() {
+    $column: 12;
+    grid-template-columns: repeat($column, 1fr);
+    column-gap: 30px;
   }
 }
