added hover effects

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,9 +51,11 @@ body {
   font-weight: 700;
   position: absolute;
   text-decoration: none;
+  transition: 0.3s;
 
   &:hover {
     cursor: pointer;
+    transform: scale(1.2);
   }
 }
 
@@ -152,6 +154,10 @@ body {
 
         &:hover {
           cursor: pointer;
+        }
+
+        &:hover .button__img{
+          transform: scale(1.5);
         }
       }
     }
@@ -607,8 +613,16 @@ input[type="radio"]:checked {
       &:hover {
         cursor: pointer;
       }
+
+      &:hover .button__img{
+        transform: scale(1.5);
+      }
     }
   }
+}
+
+.button__img {
+  transition: 0.3s;
 }
 
 .footer__content {
@@ -639,6 +653,12 @@ input[type="radio"]:checked {
   padding-top: 48px;
 
   &--logo {
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
     &-logo {
       color: $black;
       text-align: center;
