--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -88,6 +88,10 @@
       margin: 0;
     }
 
+    &__item {
+      @include hover (transform, scale(1.05));
+    }
+
     &__link {
       color: $font-color;
     }
