--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,10 +10,6 @@
     padding-block: 143px 200px;
   }
 
-  &__container {
-    position: relative;
-  }
-
   &__block {
     display: flex;
     flex-direction: row;
@@ -33,9 +29,10 @@
   }
 
   &__img {
-    height: 410px;
-    width: 280px;
+    height: 450px;
+    width: 100%;
     object-fit: cover;
+    object-position: top;
     @include hover (transform, scale(1.05));
 
     @include onTablet {
