--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,13 +6,11 @@
     background-color: $background-color;
     margin: 0;
     min-width: $mobile-width;
-    max-width: $max-desktop-width;
   }
 
   &__menu {
     position: fixed;
     box-sizing: border-box;
-    max-width: $desktop-width;
     top: 0;
     right: 0;
     left: 0;
@@ -42,4 +40,8 @@
       padding-top: 200px;
     }
   }
+}
+
+.page:has(.page__menu:target) {
+  overflow: hidden;
 }
