--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/normalize.scss";
+@import "./blocks/reset.scss";
+@import "./blocks/page.scss";
+@import "./blocks/section.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/link.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/follow.scss";
+@import "./blocks/footer.scss";
