add task solution

--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -63,12 +63,11 @@
 
   &__shedule {
     @include onTablet {
-      max-width: 220px;
+      flex-basis: 220px;
     }
 
     @include onDesctop {
-      flex-basis: 50%;
-      max-width: 170px;
+      flex-basis: 170px;
     }
   }
 
@@ -96,7 +95,11 @@
   }
 
   &__contacts {
-    flex-basis: 50%;
+    flex-basis: 220px;
+
+    @include onDesctop {
+      flex-basis: 170px;
+    }
   }
 
   &__contacts-name {
