--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page";
+@import "./blocks/header";
+@import "./blocks/grafic";
+@import "./blocks/logo";
+@import "./blocks/tickets";
+@import "./blocks/menu";
+@import "./blocks/events";
+@import "./blocks/article";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/form";
+@import "./blocks/contacts";
+@import "./blocks/footer";
