add corection width

--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -3,11 +3,11 @@
   margin: 0 auto;
   padding: 0 55px;
   @include onMob {
-    width: 320px;
+    min-width: 320px;
     padding: 0 20px;
   }
   @include onTablet {
-    width: 740px;
+    min-width: 740px;
     padding: 0 36px;
   }
   &-top {
