--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,15 +8,15 @@
   margin-bottom: 100px;
   @include onMob {
     height: 300px;
-    width: 320px;
+    min-width: 320px;
     background-position: center;
+    background-size: cover;
     margin-bottom: 235px;
     background-image: url(../images/Mob__Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
   }
   @include onTablet {
     height: 384px;
     margin-bottom: 44px;
-    // background-position: top right;
     background-image: url(../images/Tablet__Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
   }
   @include onDesktop {
