--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -15,7 +15,7 @@ h1 {
   @include onMob {
     text-align: center;
     font-size: 36px;
-    width: 280px;
+    width: min-content;
   }
 }
 
@@ -74,8 +74,8 @@ h2 {
   @include onMob {
     text-align: left;
     width: 280px;
-    justify-content: left;
-    margin: 0 auto 10px;
+    // justify-content: left;
+    margin-bottom: 10px;
   }
 }
 
