--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,5 +1,8 @@
 .buttons {
   display: flex;
+  @include onMob {
+    justify-content: center;
+  }
 }
 
 .button {
@@ -16,6 +19,7 @@
   @include onMob {
     height: 50px;
     width: 50px;
+  
   }
 
   &-bottom {
