--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,13 +7,13 @@
   padding-top: 47px;
 
   @include onTablet {
-    width: 768px;
+    width: 100%;
     height: 651px;
     padding-top: 51px;
   }
 
   @include onMob {
-    width: 320px;
+    width: 100%;
     height: 850px;
     padding-top: 32px;
   }
@@ -21,13 +21,14 @@
   &__top {
     display: flex;
     flex-direction: column;
-    width: min-content;
+    // width: min-content;
     gap: 60px;
     margin-right: 40px;
 
     @include onMob {
       display: flex;
       flex-direction: row;
+      gap: 0;
       width: 100%;
       justify-content: space-between;
       align-items: center;
@@ -47,14 +48,14 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 100%;
-    width: min-content;
+    // width: min-content;
     margin: 0;
 
     // text-align: center;
     @include onMob {
-      // width: min-content;
+      width: min-content;
       font-size: 30px;
-      // align-items: center;
+      align-items: center;
       // margin: 0 auto;
       font-weight: 700;
       line-height: 100%;
@@ -94,6 +95,7 @@
   &-content {
     display: flex;
     transition: 0.5s;
+    gap: 20px;
 
     &-block {
       transition: 0.5s;
@@ -143,11 +145,11 @@
   margin-right: 25px;
 
   @include onMob {
-    width: 130px;
+    width: 100%;
   }
 
   @include onTablet {
-    width: 220px;
+    width: 100%;
   }
 
   &-time {
@@ -162,11 +164,11 @@
     width: 170px;
 
     @include onMob {
-      width: 130px;
+      width: 100%;
     }
 
     @include onTablet {
-      width: 220px;
+      width: 100%;
     }
   }
 }
@@ -222,7 +224,7 @@
     content: "";
     width: 70px;
     height: 70px;
-    bottom: 290px;
+    bottom: 120px;
     right: 20px;
     border-radius: 50%;
     border: 2px solid rgba(26, 90, 76, 0.5);
