--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,9 +66,9 @@ ol {
   text-align: center;
 
   @include onMob {
-    width: min-content;
+    min-width: 320px;
     font-size: 30px;
-    align-items: center;
+    // align-items: center;
     margin: 0 auto;
     font-weight: 700;
     line-height: 100%;
@@ -80,13 +80,15 @@ ol {
     font-weight: 700;
     line-height: 120%;
     text-align: left;
-    width: min-content;
+    min-width: 320px;
     margin: 150px 0 90px;
 
     @include onMob {
       font-size: 45px;
       margin: 250px 0 20px;
       text-align: center;
+      width: 100%;
+
     }
 
     @include onTablet {
@@ -184,15 +186,19 @@ ol {
   height: 520px;
   background-repeat: no-repeat;
   width: 670px;
-
+ 
   @include onTablet {
     margin-bottom: 44px;
-    width: 700px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
   }
 
   @include onMob {
     height: 210px;
-    width: 280px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
     margin-bottom: 20px;
   }
 
@@ -222,23 +228,26 @@ ol {
 }
 
 .bacground__picture {
-  position: relative;
+  // position: relative;
   width: 1280px;
   height: 550px;
   margin: 0 auto;
   background-image: url(../images/Rectangle_3_1280.png);
   background-repeat: no-repeat;
-
   @include onTablet {
     height: 390px;
-    width: 700px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/Rectangle_3_740.png);
     margin: 0 auto;
   }
 
   @include onMob {
     height: 210px;
-    width: 320px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/Rectangle_3_320.png);
     align-items: center;
   }
@@ -262,11 +271,13 @@ ol {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
-  width: 100%;
+  text-align: left;
+  width: 460px;
   margin-bottom: 32px;
-
+  justify-content: space-between;
   @include onMob {
-    text-align: center;
+    // text-align: center;
+    min-width: 280px;
     margin-bottom: 15px;
   }
 
@@ -293,6 +304,7 @@ ol {
     color: #1a5a4c;
     font-weight: 700;
     line-height: 150%;
+    text-align: right;
     margin-left: 135px;
 
     @include onMob {
@@ -302,37 +314,37 @@ ol {
   }
 
   &-discrioption {
-    width: 370px;
+    max-width: 370px;
     color: #4e4e4e;
     font-weight: 300;
     line-height: 150%;
-    @include onMob {
-      width: 280px;
-      margin: 0 auto;
-    }
-
     @include onTablet {
       width: 460px;
+    }
+    @include onMob {
+      width: 100%;
     }
   }
 }
 
 .banner {
-  position: absolute;
+  // position: absolute;
+  // display: flex;
   background-color: #fff;
   width: 570px;
   height: 204px;
-  bottom: 0;
-  left: 355px;
-  transform: translateY(50%);
+  // bottom: 0;
+  // left: 355px;
+  margin: 0 auto;
+  transform: translateY(220%);
   box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
   @include onTablet {
-    left: 65px;
+    transform: translateY(140%);
   }
   @include onMob {
     width: 280px;
     height: 140px;
-    left: 20px;
+    transform: translateY(120%);
   }
 
 }
@@ -380,7 +392,7 @@ ol {
     }
 
     @include onMob {
-      width: 1200px;
+      // width: 1200px;
       gap: 20px;
       margin: 0;
 
@@ -404,7 +416,7 @@ ol {
     }
 
     @include onTablet {
-      width: 1300px;
+      // width: 1300px;
       gap: 20px;
       margin: 0;
 
@@ -468,13 +480,17 @@ ol {
 
   @include onTablet {
     height: 380px;
-    width: 768px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/subscribe_background-740.png);
   }
 
   @include onMob {
-    width: 320px;
     height: 386px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/subscribe_background-320.png);
   }
 }
@@ -514,7 +530,7 @@ ol {
 .subscribe_form {
   display: flex;
   flex-direction: row-reverse;
-  width: 470px;
+  width: 100%;
   height: 70px;
   background-color: #fff;
   outline: none;
@@ -524,7 +540,7 @@ ol {
 
   @include onMob {
     font-size: 18px;
-    width: 280px;
+    width: 320px;
     height: 50px;
   }
 }
@@ -534,9 +550,9 @@ ol {
   flex-direction: row;
   width: 570px;
   margin: 0 auto;
-  justify-content: space-between;
+  justify-content: center;
 
   @include onMob {
-    width: 290px;
+    width: 280px;
   }
 }
