changed the location of cross menu button,added shadow while menu open, made button interactive, changed background input, fixed gallery photos in grid layout

--- a/src/styles/blocks/_call-to-action.scss
+++ b/src/styles/blocks/_call-to-action.scss
@@ -13,10 +13,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all $transition-duration-speed;
+
+    &:hover {
+      background-color: $main-color;
+    }
   }
 
   &__text {
     color: $color-headers;
+
+    &:hover {
+      color: $color-white;
+    }
   }
 
   &__button {
