--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -10,6 +10,13 @@
     outline: none;
     font-family: $font-Montserrat-400;
     color: $color-h5;
+    
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      -webkit-box-shadow: 0 0 0 100px $color-white inset;
+    }
 
     @include onTablet {
       margin-right: 16px;
