--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -9,13 +9,18 @@
   &--menu {
     background-image: url(../images/menu-icon.svg);
     transition: transform $transition-duration-speed;
+    position: relative;
+    padding-top: $menu-icon-top-padding-mobile;
+          
+    @include onTablet {
+      padding-top: $menu-icon-top-padding-desktop;
+    }
   }
 
   &--cross {
     background-image: url(../images/cross.svg);
     width: 12.73px;
     height: 12.73px;
-    padding-top: 25px;
   }
 
   &--more {
