--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,9 +1,19 @@
 .menu {
   background-color: $main-color;
   overflow-y: auto;
+  height: $height-menu-mobile;
+  padding-bottom: 23px;
+
+  @include onTablet {
+    padding-bottom: 39px;
+    height: $height-menu-tablet;
+  }
+
+  @include onDesktop {
+    height: $height-menu-desktop;
+  }
   
   &__content {
-    //height: 100vh;
     padding-top: $menu-top-padding-mobile;
         
     @include onTablet {
@@ -72,19 +82,16 @@
   }
 
   &__work {
-    margin-bottom: 23px;
+    //margin-bottom: 23px;
     
     @include onTablet {
-      margin-bottom: 39px;
+      //margin-bottom: 39px;
 
       &-days {
         display: flex;
         justify-content: space-between;
       }
         
-    }
-    @include onDesktop {
-      margin-bottom: 48px;
     }
   }
 }
