--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -13,6 +13,11 @@ $header-top-padding-mobile: 10px;
 $header-top-padding-desktop: 15px;
 $menu-top-padding-desktop: 45px;
 $menu-top-padding-mobile: 27px;
+$menu-icon-top-padding-mobile: calc(10px + 27px);
+$menu-icon-top-padding-desktop: calc(15px + 45px);
+$height-menu-mobile: 450px;
+$height-menu-tablet: 263px;
+$height-menu-desktop: 272px;
 $header-bottom-padding: 230px;
 $logo-height-mobile: 61px;
 $logo-height-desktop: 72px;
