--- a/src/styles/blocks/_top-icons.scss
+++ b/src/styles/blocks/_top-icons.scss
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 250px;
-  align-items: center;
+  //align-items: center;
     
   @include onTablet {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    align-items: center;
+    //align-items: center;
     padding-bottom: 40px;
   }
   
