fixed background photos for sections

--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about-us {
-  background-image: url("/images/museum-photo (8).jpg");
+  background-image: url("../images/museum-photo (8).jpg");
   height: 386px;
   background-position: center;
   background-repeat: no-repeat;
