fixed background photos for sections...again

--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -99,7 +99,7 @@
   }
   
   &__lecture {
-    background-image: url("../images/museum-photo (3).jpg");
+    background-image: url(../images/museum-photo3.jpg);
     height: 210px;
     background-position: bottom;
     background-repeat: no-repeat;
