--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -125,6 +125,7 @@
   }
 
   &__button {
+    height: 50px;
     @include contentPaddingInline;
     grid-column: 1 / -1;
 
@@ -146,10 +147,12 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      height: 50px;
+      height: 100%;
+      border: 1px solid $background-color1;
+      box-sizing: border-box;
     }
 
-    &__text {
+    &__block {
       color: $font-color;
       font-family: $font-family2;
       font-size: 16px;
@@ -158,10 +161,10 @@
       height: 100%;
       box-sizing: border-box;
 
-      border: 1px solid $background-color1;
       display: flex;
       justify-content: center;
       align-items: center;
+      @include hover (transform, scale(1.3));
     }
 
     &__icon {
@@ -171,7 +174,9 @@
       justify-content: center;
       align-items: center;
 
-      padding-inline: 13px;
+      &__img {
+        padding: 13px;
+      }
     }
   }
 
