--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -101,7 +101,7 @@
 
     &__button {
       cursor: pointer;
-      width: 50px;
+      // width: 50px;
       flex-shrink: 0;
       background-color: $rectangle-color;
       border: 0;
@@ -112,8 +112,13 @@
       justify-content: center;
       align-items: center;
 
-      @include onTablet {
-        width: 70px;
+      &__icon {
+        padding: 13px;
+        
+
+        @include onTablet {
+          padding: 23px;
+        }
       }
     }
   }
