--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -125,6 +125,12 @@ body {
 
     &--tickets {
       display: flex;
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
 
       &-text {
         width: 199px;
@@ -154,10 +160,6 @@ body {
 
         &:hover {
           cursor: pointer;
-        }
-
-        &:hover .button__img{
-          transform: scale(1.5);
         }
       }
     }
@@ -609,20 +611,15 @@ input[type="radio"]:checked {
       height: 70px;
       background: $orange;
       border: none;
+      transition: 0.3s;
 
       &:hover {
         cursor: pointer;
-      }
+        transform: scale(1.2);
 
-      &:hover .button__img{
-        transform: scale(1.5);
       }
     }
   }
-}
-
-.button__img {
-  transition: 0.3s;
 }
 
 .footer__content {
@@ -1208,8 +1205,8 @@ input[type="radio"]:checked {
   }
 
   .slider-img {
-    width: 280px;
-    height: 410px;
+    width: 100%;
+    height: auto;
   }
 
   .slider__buttons {
