add task solution

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -24,7 +24,7 @@
   }
 
   &__subtitle {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
@@ -66,7 +66,6 @@
     width: 80%;
     padding: 0;
     margin: 0;
-    border: 0px solid white;
     box-sizing: border-box;
     height: 50px;
     padding-left: 32px;
@@ -86,7 +85,7 @@
     }
 
     &::placeholder {
-      font-family: "Montserrat";
+      font-family: "Montserrat", sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
@@ -101,32 +100,32 @@
     height: 50px;
     text-decoration: none;
 
-    background-color: #F14A27;
+    background-color: #f14a27;
 
     width: 20%;
 
     border: none;
 
     @include onTablet {
-       height: 70px;
+      height: 70px;
 
-       width: 13%;
+      width: 13%;
     }
   }
 
   &__bg {
 
-  position: absolute;
+    position: absolute;
 
-  z-index: -1;
-  width: 100%;
-  height: 386px;
-  background-image: url(../images/subscription.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    z-index: -1;
+    width: 100%;
+    height: 386px;
+    background-image: url(../images/subscription.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-  margin-top: 100px;
+    margin-top: 100px;
 
     @include onTablet {
       height: 380px;
@@ -136,7 +135,7 @@
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus {
-    -webkit-text-fill-color: #0F0E08;
+    -webkit-text-fill-color: #0f0e08;
     -webkit-box-shadow: 0 0 0px 40rem #fff inset;
   }
 
