add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/variables.scss";
+@import "./utils/null-style.scss";
+@import "./utils/mixins.scss";
+@import "./utils/hover-effect.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/block-text-about.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/header.scss";
+@import "./blocks/title.scss";
+@import "./blocks/art-museum.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/description.scss";
+@import "./blocks/classicism.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/button-top.scss";
