exhitibion section has been done for all devices

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,4 +3,6 @@
 @import "page";
 @import "blocks/header";
 @import "blocks/modal";
+@import "blocks/events";
+@import "blocks/lection";
 @import "blocks/nav";
