--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -23,3 +23,9 @@ $nav-font-color-active: #000;
 // Tickets button
 $border-color: #1a5a4c;
 $background-color: #1a5a4c;
+
+// Exhibition
+$date-font-color: #1a5a4c;
+$title-font-color: #0f0e08;
+$point-background-color: #f14a27;
+$content-font-color: #4E4E4E;
