--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,7 +26,7 @@
     left: 0;
     width: 100%;
     height: 300px;
-    background-image: url(../images/header/museum-mobile.jpg);
+    background-image: url(../images/mobile/museum.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -36,13 +36,13 @@
       left: 50%;
       width: 50%;
       height: 384px;
-      background-image: url(../images/header/museum-tablet.jpg);
+      background-image: url(../images/tablet/museum.jpg);
     }
 
     @include onDesktop {
       left: 50%;
       height: 655px;
-      background-image: url(../images/header/museum-desktop.jpg);
+      background-image: url(../images/museum.jpg);
     }
   }
 
