lection section nas been done for all devices

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -66,11 +66,11 @@
         font-family: $content-font;
         font-size: 16px;
         font-style: normal;
-        line-height: 100%; /* 16px */
+        line-height: 100%;
 
         &:first-child {
           margin-right: 30px;
-          color: #687480;
+          color: $name-font-color;
           font-weight: 500;
         }
 
