--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -24,8 +24,9 @@ $nav-font-color-active: #000;
 $border-color: #1a5a4c;
 $background-color: #1a5a4c;
 
-// Exhibition
+// Events
+$name-font-color: #687480;
 $date-font-color: #1a5a4c;
 $title-font-color: #0f0e08;
 $point-background-color: #f14a27;
-$content-font-color: #4E4E4E;
+$content-font-color: #4e4e4e;
