--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -1,5 +1,7 @@
 .lection {
+  position: relative;
   display: flex;
+  flex-direction: column;
 
   &__background {
     display: block;
@@ -19,6 +21,95 @@
     @include onDesktop {
       min-width: 100%;
       height: 550px;
+    }
+  }
+
+  &__info {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 280px;
+    margin: 0 auto;
+    padding: 20px 0;
+    background-color: white;
+    border-bottom: 1px solid rgba(26, 90, 76, 0.25);
+
+    @include onTablet {
+      bottom: 14%;
+      width: 570px;
+      padding: 45px 54px 50px;
+    }
+
+    @include onDesktop {
+      bottom: 20%;
+      padding: 45px 100px 50px;
+    }
+
+    &--date {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 30px;
+
+      @include onTablet {
+        justify-content: flex-start;
+      }
+
+      & span {
+        font-family: $content-font;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 100%;
+
+        &:first-child {
+          margin-right: 24px;
+          color: $name-font-color;
+          font-weight: 500;
+
+          @include onTablet {
+            margin-right: 170px;
+          }
+
+          @include onDesktop {
+            margin-right: 124px;
+          }
+        }
+
+        &:last-child {
+          color: $date-font-color;
+          font-weight: 700;
+        }
+      }
+    }
+
+    &--title {
+      color: $title-font-color;
+      font-family: $header-font;
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%;
+      text-align: center;
+
+      @include onTablet {
+        font-size: 36px;
+        text-align: left;
+      }
+    }
+  }
+
+  &__break {
+    margin-bottom: 184px;
+
+    @include onTablet {
+      margin-bottom: 208px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 302px;
     }
   }
 }
