--- a/src/styles/blocks/info-block.scss
+++ b/src/styles/blocks/info-block.scss
@@ -1,5 +1,6 @@
 .info-block {
   &__event {
+    margin: 0;
     text-transform: uppercase;
     color: $font-color-side-block;
     font-family: $font-family2;
@@ -9,6 +10,7 @@
   }
 
   &__data {
+    margin: 0;
     color: $background-color1;
     font-family: $font-family2;
     font-size: 16px;
