--- a/src/styles/blocks/working-hours.scss
+++ b/src/styles/blocks/working-hours.scss
@@ -20,10 +20,6 @@
     line-height: 150%;
   }
 
-  &__text-bold {
-    font-weight: bold;
-  }
-
   &__weekend {
     font-style: normal;
     font-weight: 400;
@@ -35,6 +31,11 @@
 
     @include onDesktop {
       max-width: 170px;
+    }
+
+    &__text {
+      margin: 0;
+      font-family: inherit;
     }
   }
 }
