--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -74,6 +74,7 @@
       }
 
       &__text {
+        margin: 0;
         color: $info-text-color;
         font-family: $font-family2;
         font-size: 16px;
