--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -42,6 +42,7 @@
   }
 
   &__text {
+    margin: 0;
     color: $background-color;
     text-align: center;
     font-family: $font-family2;
@@ -101,7 +102,6 @@
 
     &__button {
       cursor: pointer;
-      // width: 50px;
       flex-shrink: 0;
       background-color: $rectangle-color;
       border: 0;
