gallery section has been done

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -32,6 +32,10 @@
     &--picture {
       display: block;
       width: 100%;
+      transition: transform 300ms;
+      &:hover {
+        transform: scale(1.2);
+      }
 
       @include onDesktop {
         width: 670px;
