--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -30,3 +30,7 @@ $date-font-color: #1a5a4c;
 $title-font-color: #0f0e08;
 $point-background-color: #f14a27;
 $content-font-color: #4e4e4e;
+
+// Gallery
+$dots-color: #e0e0e0;
+$dots-active-color: #1a5a4c;
