--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 280px;
+    width: $onMobileContent;
     margin: 0 auto;
     padding: 20px 0;
     background-color: white;
