--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -144,8 +144,9 @@ a {
   text-decoration: none;
   font-family: "IBM Plex Sans";
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   color: #0F0E08;
+  line-height: 22px;
 
   &:hover {
     text-decoration: underline;
