--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,13 +1,13 @@
 .galery {
 @include onMobile {
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   padding-bottom: 100px;
 }
 
 @include onDesktop {
-  padding-left: 55px;
-  padding-right: 55px;
+  margin-left: 55px;
+  margin-right: 55px;
   padding-bottom: 200px;
   padding-top: 100px;
 }
@@ -26,20 +26,21 @@
     
 
    @include onDesktop {
-    min-width: 100%;
+    background-size: cover;
+
     background-repeat: no-repeat;
+   
 
     &--1 {
       background-repeat: no-repeat;
       height: 600px;
-      width: 370;
       margin-bottom: 30px;
+      width: 370px;
       background-image: url(../images/foto1.png);
     }
 
     &--2 {
       height: 600px;
-      
       margin-bottom: 30px;
       background-image: url(../images/foto2.png);
     }
@@ -89,11 +90,21 @@
   max-height: 550px;
 
   &-pagination {
+    
     padding-top: 20px;
-    position: static;
+    
+
 
     @include onTablet {
       padding-top: 30px;
     }
+
+    @include onTablet {
+    
+      
+    }
+
+    
+
   }
 }
