--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,16 +13,21 @@
     background-image: url(../images/ontablet.png);
     background-repeat: no-repeat;
     background-position: top right;
-    height: 350px;
+    
+    min-height: 384px;
     margin-left: 35px;
+    
+    margin-right: 0;
+  }
+  @include onMobile {
+    
   }
 
-  
-
   &__top-actions {
-    padding: 0 20px 255px;
-    margin-bottom: 20px;
-    background-image: url(../images/header-mob.png);
+   
+    background-image: url(../images/header-mob2.png);
+    height: 300px;
+    width: 320px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -30,20 +35,20 @@
 
     @include onTablet {
       background-image: none;
-      padding: 15px 39px 0;
-      margin-bottom: 40;
+      height: 0;
+      width: 0;
+      
     }
 
     @include onDesktop {
       background-image: none;
-      padding: 15px 55px 0;
-      margin-bottom: 119px;
+      height: 0;
+      width: 0;
+      
     }
   }
   
   &__ivent {
-    
-
     @include onMobile {
       display: none;
     }
@@ -83,23 +88,31 @@
    font-size: 26px;
    text-transform: uppercase;
 
+   @include onMobile {
+  font-size: 45px;
+  
+  
+}
    @include onTablet {
     text-align: left;
-    font-size: 20px;
+    font-size: 54px;
+    padding-top: 103px;
+    line-height: 1;
   }
 
     @include onDesktop {
     font-family: "Montserrat";
     font-weight: 700;
     text-align: left;
-    font-size: 42px;
+    font-size: 72px;
     line-height: 1;
     text-transform: uppercase;
+    padding-top: 200px;
   }
 }
 
   &__logo {
-    background-image: url(../images/NAMU.png);
+    
     display: block;
     width: 80px;
     height: 80px;
@@ -114,8 +127,38 @@
       margin-left: 650px;
     }
 
-    @include onMobile {
-      margin: 0 auto;
+    @include onDesktop {
+      display: block;
+      width: 70px;
+    height: 70px;
+    position: absolute;
+    right: 600px;
+    padding-top: 15px;
+    }
+
+    @include onTablet {
+     
+      width: 45px;
+      height: 45px;
+      padding-left: 300px;
+      position: absolute;
+      right: 250px;
+    }
+
+  
+    &-mob {
+      width: 55px;
+      height: 61px;
+      margin-left: 95px;
+      padding-top: 0;
+      padding-top: 12px;
+
+      @include onDesktop {
+        display: none;
+      }
+      @include onTablet {
+        display: none;
+      }
     }
 
   }
@@ -140,7 +183,7 @@
 
     @include onTablet {
     padding-left: 0;
-    padding-top: 35px;
+    padding-top: 55px;
     }
 
   
@@ -150,9 +193,13 @@
       border: 2px solid #1A5A4C;
       text-align: center;
       justify-content: center;
+      font-family: IBM Plex Sans;
+      font-size: 16px;
+      font-weight: 500;
 
       @include onMobile {
         height: 46px;
+        width: 250px;
       }
       @include onDesktop {
       width: 200px;
@@ -187,6 +234,7 @@
       }
 
       @include onDesktop {
+      background-repeat: no-repeat;
       padding-right: 30px;
       height: 70px;
       width: 70px;
@@ -209,9 +257,21 @@
   }
 }
 
+.arrow {
+  display: flex;
+  height: 12px;
+  width: 7px;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  
+  justify-content: center;
+  
+}
+
 h1 {
   @include onMobile {
     margin-bottom: 0;
+    margin-top: 20px;
   }
 }
 .nav {
@@ -224,13 +284,32 @@ h1 {
     width: 18px;
     height: 12px;
     z-index: 1;
+
+    @include onMobile{
+      padding-top: 27px;
+    }
+
+    @include onDesktop {
+      padding-top: 45px;
+      
+      
+    }
+  }
+
+  @include onMobile {
+    padding-left: 20px;
+    padding-top: 0;
+  }
+  @include onDesktop {
+    padding-left: 0;
   }
 }
 
 .text {
-
+text-transform: uppercase;
   @include onMobile {
-    margin-top: 16px;
+    margin-top: 14px;
+    font-size: 16px;
   }
 
   @include onDesktop {
@@ -248,9 +327,3 @@ h1 {
  
 }
 
-.arrow {
-  height: 12px;
-  width: 7px;
-  margin: 0 auto;
-
-}
