--- a/src/styles/blocks/ivent.scss
+++ b/src/styles/blocks/ivent.scss
@@ -1,13 +1,15 @@
 
 .main {
-  padding-top: 200px;
-  padding-left: 55px;
-  padding-right: 55px;
+ 
 
   @include onMobile {
-    padding-top: 30px;
+    padding-top: 70px;
     padding-left: 0;
   padding-right: 0;
+  }
+
+  @include onDesktop {
+    padding-top: 200px;
   }
 }
 
@@ -19,7 +21,7 @@
   @include onMobile {
     background-image: url(../images/ivent-mob.png);
     height: 210px;
-   margin-left: 20px;
+    margin-left: 20px;
     margin-right: 20px;
     background-repeat: no-repeat;
   }
@@ -29,11 +31,16 @@ background-image: url(../images/ivent1.png);
 background-size: auto;
 height: 620px;
 background-repeat: no-repeat;
+margin-left: 55px;
+margin-right: 0;
+    
   }
 
   @include onTablet {
     background-image: url(../images/ivent-tablet.png);
     height: 520px;
+    margin-left: 34px;
+    margin-right: 34px;
   }
 
 
@@ -52,11 +59,15 @@ background-repeat: no-repeat;
   background-size: auto;
 height: 620px;
 background-repeat: no-repeat;
+margin-left: 55px;
+margin-right: 0;
   }
 
   @include onTablet {
     background-image: url(../images/ivent2-tablet.png);
     height: 520px;
+    margin-left: 34px;
+    margin-right: 34px;
   }
 
 }
@@ -67,9 +78,11 @@ background-repeat: no-repeat;
     font-size: 36px;
     text-align: center;
     margin: 0 auto;
-    margin-left: 20px;
+    margin-left: 60px;
     margin-right: 20px;
     margin-bottom: 40px;
+    width: 180px;
+    line-height: 0.9;
   }
 
   @include onDesktop {
@@ -77,12 +90,40 @@ background-repeat: no-repeat;
   font-family: "Montserrat";
   font-weight: 700;
   text-align: left;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 55px;
+  margin-bottom: 0;
+  padding-bottom: 56px;
+  width: 470px;
+
+}
+
+@include onTablet {
+  width: 100%;
+  text-align: left;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 32px;
+  margin-bottom: 0;
+  width: 460px;
+  padding-bottom: 48px;
 }
 }
 
 .ivent__desk {
   padding-left: 20px;
   padding-right: 20px;
+
+  @include onDesktop {
+    padding-left: 0px;
+    padding-right: 55px;
+  }
+
+  @include onTablet {
+    padding-left: 32px;
+    
+  }
 
   &-title-container {
     display: flex;
@@ -132,6 +173,7 @@ background-repeat: no-repeat;
     @include onMobile {
       font-size: 28px;
       margin-top: 15px;
+      
     }
     font-family: Montserrat;
     font-weight: 400;
@@ -156,6 +198,10 @@ background-repeat: no-repeat;
       width: 280px;
       font-weight: 300;
       color: #4E4E4E;
+    }
+
+    @include onDesktop {
+      width: 100%;
     }
 
   
