--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -150,7 +150,7 @@
 
 &__nav-list {
   display: flex;
-  gap: 30px;
+  gap: 50px;
  
 }
 
@@ -213,6 +213,10 @@
 
   @include onMobile {
     font-size: 16px;
+  }
+
+  @include onDesktop {
+    font-size: 22px;
   }
 }
 &__wh-paragraf-container {
