--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "utils";
+@import "utils/extends.scss";
 @import "blocks/mixins.scss";
 @import "fonts";
 @import "typography";
@@ -29,4 +30,28 @@ html {
     }
   
 }
+
+%h1 {
+  font-family: "Montserrat";
+  
+  
+  @include onMobile {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 100%;
+  }
+    @include onDesktop {
+      font-weight: 700;
+    font-size: 72px;
+    }
+
+    @include onTablet {
+      font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+
+    }
+  }
+
+
 
