add task solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -92,6 +92,8 @@
 
     grid-column: 2;
 
+    margin-bottom: -20px;
+
     @include onTablet {
       display: none;
 
@@ -102,13 +104,9 @@
   &__border {
     grid-column: span 2;
 
-    position: absolute;
-
     border-bottom: 1px solid #1A5A4C80;
 
     width: 100%;
-
-    top: 415px;
 
     @include onTablet {
       display: none;
