--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -136,7 +136,7 @@
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus {
     -webkit-text-fill-color: #0f0e08;
-    -webkit-box-shadow: 0 0 0px 40rem #fff inset;
+    -webkit-box-shadow: 0 0 0 40rem #fff inset;
   }
 
 }
